--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ body {
   align-items: flex-start;
   gap: 32px;
   align-self: stretch;
+  font-family: "Roboto", sans-serif;
 }
 li{
     list-style-type: none;
