--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ body {
   gap: 32px;
   align-self: stretch;
   font-family: "Roboto", sans-serif;
+  color: #434455;
 }
 li{
     list-style-type: none;
