--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,18 @@ color:#404bbf;
   line-height: 1.5;
   letter-spacing: 0.32px;
 }
+.section-title{
+  color: var(--navyblue, #2e2f42);
+  text-align: center;
+   font-family: Roboto;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.72px;
+  text-transform: capitalize;
+}
+
 .head-line {
   color: var(--navyblue, #2e2f42);
   text-align: center;
